<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.view.fragment.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/color_background"
            android:contentDescription="@string/content_description_background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/textViewGenreDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleDetail"
            tools:text="Genre" />

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="160dp"
            android:layout_height="230dp"
            android:layout_margin="18dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/content_description_movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:contentDescription="@string/content_description_icon_star"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
            app:layout_constraintTop_toTopOf="@+id/imageViewPoster"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_icon_timer"
            android:src="@drawable/ic_timer"
            app:layout_constraintStart_toStartOf="@+id/imageViewStar"
            app:layout_constraintTop_toBottomOf="@+id/imageViewStar"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_icon_date"
            android:src="@drawable/ic_date"
            app:layout_constraintStart_toStartOf="@+id/imageViewTimer"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTimer"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textViewStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewStar"
            app:layout_constraintStart_toEndOf="@+id/imageViewStar"
            app:layout_constraintTop_toTopOf="@+id/imageViewStar"
            tools:text="Rating" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewTimer"
            app:layout_constraintStart_toEndOf="@+id/imageViewTimer"
            app:layout_constraintTop_toTopOf="@+id/imageViewTimer"
            tools:text="Timer" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewDate"
            app:layout_constraintStart_toEndOf="@+id/imageViewDate"
            app:layout_constraintTop_toTopOf="@+id/imageViewDate"
            tools:text="Date" />

        <TextView
            android:id="@+id/textViewOverview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/actor"
            android:maxLines="6"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/background"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/typeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/detail_type"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />

        <TextView
            android:id="@+id/boxOfficeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/detail_box_office"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/typeTitle"
            app:layout_constraintTop_toBottomOf="@+id/typeTitle" />

        <TextView
            android:id="@+id/textViewAwardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/detail_awards"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/boxOfficeTitle"
            app:layout_constraintTop_toBottomOf="@+id/boxOfficeTitle" />

        <TextView
            android:id="@+id/textViewLanguageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/detail_language"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewAwardsTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewAwardsTitle" />

        <TextView
            android:id="@+id/textViewProductionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/detail_production"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewLanguageTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguageTitle" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/typeTitle"
            app:layout_constraintStart_toEndOf="@+id/typeTitle"
            app:layout_constraintTop_toTopOf="@+id/typeTitle"
            tools:text="Movie" />

        <TextView
            android:id="@+id/textViewBoxOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/boxOfficeTitle"
            app:layout_constraintStart_toEndOf="@+id/boxOfficeTitle"
            app:layout_constraintTop_toTopOf="@+id/boxOfficeTitle"
            tools:text="100.000.000$" />

        <TextView
            android:id="@+id/textViewAwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAwardsTitle"
            app:layout_constraintStart_toEndOf="@+id/textViewAwardsTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewAwardsTitle"
            tools:text="Awards" />

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLanguageTitle"
            app:layout_constraintStart_toEndOf="@+id/textViewLanguageTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewLanguageTitle"
            tools:text="English" />

        <TextView
            android:id="@+id/textViewProduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewProductionTitle"
            app:layout_constraintStart_toEndOf="@+id/textViewProductionTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewProductionTitle"
            tools:text="Production" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:backgroundTint="@color/color_background"
            android:contentDescription="@string/content_description_fab_favorite"
            android:src="@drawable/ic_favorite"
            app:borderWidth="0dp"
            app:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>